# RamanControl

./: CMakeLists.txt  RamanControl.c  RamanControl.py  RamanControlParameters.py  RamanControl_wrapper.py  RamanFieldFunctions.py  rt  test.py  test_pool.py
RAC/: RAC.c  RAC.py  RAC_wrapper.py
RamanControl_NLOPT_C/: CMakeLists.txt  RamanAssistedControl.c  RamanAssistedControl.py  RamanAssistedControl_utils.c  RamanAssistedControl_utils.h  RamanAssistedControl_wrapper.py  RamanControl.c  RamanControl.py  RamanControl_wrapper.py
RamanControl_NLOPT_C/AbsorptionSpectra/: Propagate.c  absorption.py  wrapper.py
RamanControl_NLOPT_C/MultipleVibrationsRamanAssisted/: OptimalField.py  PropagateOptimize.c  RamanAssistedControl.c  RamanAssistedControl.py  RamanAssistedControl_wrapper.py  wrapper.py
RamanControl_NLOPT_C/SingleFieldRamanAssisted/: RamanAssistedControl.c  RamanAssistedControl.py  RamanAssistedControl_3lvl.py  RamanAssistedControl_5lvl.py  RamanAssistedControl_wrapper.py
RamanControl_NLOPT_C/SingleFieldRamanAssisted/5level/: RamanAssistedControl_5lvl.c  RamanAssistedControl_5lvl.py  RamanAssistedControl_wrapper.py  Transfer.py
